v0.9.2: simplified servlet context handler configuration + general improvements